--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ __marimo__/
 sys_dev/Phase2/wacom_recordings
 sys_dev/Phase2_rev1/wacom_recordings
 sys_dev/Phase2_rev_div_screen/wacom_recordings
+sys_dev/Phase2_color/wacom_recordings
