finish color function

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ sys_dev/Phase2/wacom_recordings
 sys_dev/Phase2_rev1/wacom_recordings
 sys_dev/Phase2_rev_div_screen/wacom_recordings
 sys_dev/Phase2_color/wacom_recordings
+sys_dev/Phase2_divscreen_color/wacom_recordings
